--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# ===============================
+#       DATABASE
+# ===============================
+spring.profiles.default=local
+
+
+# ===============================
+#       Host
+# ===============================
+server.port=8080
+server.host=http://localhost:${server.port}
+
+# ===============================
+#       ATTACH
+# ===============================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
