--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,50 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/Youtube
+spring.datasource.username=postgres
+spring.datasource.password=3312425bD
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 # ===============================
-#       DATABASE
+#       Host
 # ===============================
+server.port=8080
+server.host=http://localhost:${server.port}
+# ===============================
+#       EMAIL
+# ===============================
+spring.mail.host=smtp.mail.ru
+spring.mail.port=465
+spring.mail.username=harunzulkifl@mail.ru
+spring.mail.password=QzKY5zqLv3hjbzL0LtsP
+spring.mail.protocol=smtps
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+
+
+# ===============================
+#       ATTACH
+# ===============================
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
+# ===============================
+#       sql
+# ===============================
+#spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+
+
+# ===============================
+#       FLYWAY
+# ===============================
+spring.flyway.baselineOnMigrate=true
+spring.flyway.enabled=false
+ipart.max-request-size=10MB
