--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 #       DATABASE
 # ===============================
-spring.profiles.default=local
+spring.profiles.default=prod
 
 
 # ===============================
