--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/Youtube
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_youtube
 spring.datasource.username=postgres
-spring.datasource.password=3312425bD
+spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -14,8 +14,8 @@ server.host=http://localhost:${server.port}
 # ===============================
 spring.mail.host=smtp.mail.ru
 spring.mail.port=465
-spring.mail.username=harunzulkifl@mail.ru
-spring.mail.password=QzKY5zqLv3hjbzL0LtsP
+spring.mail.username=abdulloh.erkinov.0021gmail.com@mail.ru
+spring.mail.password=QJeFk2YCFvVwjxRV2cJ3
 spring.mail.protocol=smtps
 
 spring.mail.properties.mail.smtp.auth=true
