--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
   #      DATABASE
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_youtube
+spring.datasource.url=jdbc:postgresql://localhost:5432/YouTube
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=root123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
