--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,8 @@
   #      DATABASE
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_youtube
+spring.datasource.url=jdbc:postgresql://localhost:5432/YouTube
 spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.password=Oyatillo2003
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,8 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # ===============================
 spring.mail.host=smtp.mail.ru
 spring.mail.port=465
-spring.mail.username=abdulloh.erkinov.0021gmail.com@mail.ru
-spring.mail.password=QJeFk2YCFvVwjxRV2cJ3
+spring.mail.username=soliyev_2024@internet.ru
+spring.mail.password=2LWUkyGyqccbARyHzbPE
 spring.mail.protocol=smtps
 
 spring.mail.properties.mail.smtp.auth=true
