--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,44 @@
+
 # ===============================
 #       DATABASE
 # ===============================
-spring.profiles.default=local
+spring.datasource.url=jdbc:postgresql://localhost:5432/YouTube
+spring.datasource.username=postgres
+spring.datasource.password=Oyatillo2003
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+# ===============================
+#       EMAIL
+# ===============================
+spring.mail.host=smtp.mail.ru
+spring.mail.port=465
+spring.mail.username=soliyev.2024@mail.ru
+spring.mail.password=E8jWmfvuudqA23RfQdGG
+spring.mail.protocol=smtps
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ===============================
+#       EMAIL
+# ===============================
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=pochtaserver24@gmail.com
+#spring.mail.password=906183202M&&A
+#
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+#
+#spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ===============================
 #       Host
@@ -22,9 +58,10 @@ spring.servlet.multipart.max-request-size=10MB
 #spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 
+
 # ===============================
 #       FLYWAY
 # ===============================
-
 spring.flyway.baselineOnMigrate=true
 spring.flyway.enabled=false
+#spring.flyway.enabled=false
