--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,3 +65,13 @@ spring.servlet.multipart.max-request-size=10MB
 spring.flyway.baselineOnMigrate=true
 spring.flyway.enabled=false
 #spring.flyway.enabled=false
+
+# ===============================
+#       LOG
+# ===============================
+logging.level.com.example=DEBUG
+#logging.level.root=DEBUG
+logging.pattern.console=%date{dd MMM yyyy;HH:mm:ss.SSS} [%thread] %highlight(%-5level) %cyan(%logger{36}) - %green(%msg%n)
+logging.file.path=D:/Log
+logging.file.name=${logging.file.path}/logs/myLogFile.log
+logging.pattern.file=%date{dd MM yyyy - HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
