--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<version>2.0.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.0.Final</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
