--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -22,3 +22,12 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 # ===============================
+
+# ===============================
+#       LOG
+# ===============================
+# logging.level.com.example=DEBUG
+#logging.level.root=DEBUG
+logging.file.path=D:/Java dars prezintatsiya/Java darslar  Spring/YouTube_Project
+logging.file.name=${logging.file.path}/logs/myLogFile.log
+logging.pattern.file=%date{dd MM yyyy - HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
