video tag and video like done

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@
 # ===============================
 spring.datasource.url=jdbc:postgresql://localhost:5432/YouTube
 spring.datasource.username=postgres
-spring.datasource.password=root123
+spring.datasource.password=Oyatillo2003
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
